--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
       "Raul Ochoa <rochoa@cartodb.com>",
       "Carlos Matallín <matallo@cartodb.com>",
       "Jaime Chapinal <jaime.chapinal@cartodb.com>",
-      "Nicklas Gummesson <nicklas@cartodb.com>"
+      "Nicklas Gummesson <nicklas@cartodb.com>",
+      "Francisco Dans <francisco@cartodb.com>"
     ],
     "licenses": [{
       "type": "BSD"
