--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "cartodb.js",
-    "version": "3.14.1",
+    "version": "3.14.2-dev",
     "description": "CartoDB javascript library",
     "repository": {
       "type": "git",
