--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "cartodb.js",
   "main": [
-    "dist/cartodb.js",
-    "dist/themes/css/cartodb.css"
+    "cartodb.js",
+    "themes/css/cartodb.css"
   ],
   "version": "3.15.1",
   "homepage": "https://github.com/CartoDB/cartodb.js",
